--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
     <header class="fixed top-0 left-0 right-0 z-50 bg-black/30 backdrop-blur-lg border-b border-slate-800">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#" class="text-xl font-bold text-white">Alejandro G Vera</a>
-            <nav class="hidden md:flex space-x-2">
+            <!-- CAMBIO AQUÍ: Aumentado el espacio entre elementos de 'space-x-2' a 'space-x-4' -->
+            <nav class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="nav-link">Sobre mí</a>
                 <a href="#experience" class="nav-link">Experiencia</a>
                 <a href="#portfolio" class="nav-link">Portafolio</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
-                <a href="#contact" class="nav-link bg-sky-600 text-white hover:bg-sky-500">Contacto</a>
+                <!-- CAMBIO AQUÍ: Aumentado el padding horizontal de 'px-4' a 'px-6' para darle más espacio -->
+                <a href="#contact" class="nav-link bg-sky-600 text-white hover:bg-sky-500 px-6">Contacto</a>
             </nav>
             <button id="mobile-menu-button" class="md:hidden text-white">
                 <i class="fas fa-bars fa-lg"></i>
