--- a/index.html
+++ b/index.html
@@ -123,6 +123,37 @@
             width: 100%;
             height: 100%;
         }
+
+        /* --- Markdown Responsive Styles --- */
+        #markdown-display {
+            overflow-x: auto;
+            max-width: 100%;
+            word-wrap: break-word;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        #markdown-display pre {
+            white-space: pre-wrap;
+            word-break: break-word;
+            max-width: 100%;
+            background-color: #1e293b;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            overflow-x: auto;
+        }
+
+        #markdown-display img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        #markdown-display table {
+            width: 100%;
+            overflow-x: auto;
+            display: block;
+        }
+
+        
     </style>
 </head>
 
