--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             display: block;
         }
 
-        
+
     </style>
 </head>
 
@@ -656,7 +656,7 @@
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
                     ¿Preguntas, comentarios?.
                 </p>
-                <a href="mailto:tuemail@example.com"
+                <a href="mailto:eldiosvolador@hotmail.com"
                     class="inline-block bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors">
                     <i class="fas fa-envelope mr-2"></i> eldiosvolador@hotmail.com
                 </a>
