--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold text-white mb-4">Hablemos</h2>
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
-                    ¿Preguntas, comentarios?.
+                    ¿Preguntas, comentarios?
                 </p>
                 <a href="mailto:eldiosvolador@hotmail.com"
                     class="inline-block bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors">
