Agregué 8 libros más

--- a/index.html
+++ b/index.html
@@ -640,6 +640,105 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Author / Books Section 3 -->
+        <section id="author2" class="py-20 md:py-32 bg-gray-900">
+            <div class="container mx-auto px-6">
+
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+                    <!-- Book Card 9 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/009- Burnout en desarrollo de software Alejandro G Vera.pdf" target="_blank"><img
+                                src="images/009- Burnout en desarrollo de software Alejandro G Vera-PORTADA.jpg"
+                                alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Burnout en trabajos IT</h4>
+                            <p class="text-sm text-gray-400 mt-1">Informe</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 10 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera.pdf" target="_blank"><img
+                                src="images/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera-1_PORTADA.jpg"
+                                alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Domina MS Word</h4>
+                            <p class="text-sm text-gray-400 mt-1">Ofimática</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 11 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera.pdf" target="_blank"><img
+                                src="images/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera-1_PORTADA.jpg"
+                                alt="Portada del libro Guía integral de Ethical hacking"
+                                class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Guía de programación Java</h4>
+                            <p class="text-sm text-gray-400 mt-1">Curso</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 12 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/012- Guia HTML 5 CSS3 AGV.pdf"
+                            target="_blank"><img src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
+                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">HTML5 CSS3</h4>
+                            <p class="text-sm text-gray-400 mt-1">Guía</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Author / Books Section 9 -->
+        <section id="author2" class="py-20 md:py-32 bg-gray-900">
+            <div class="container mx-auto px-6">
+
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+                    <!-- Book Card 13 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/013- Guía Maestra de Python Con Portada A G V.pdf" target="_blank"><img
+                                src="images/013- Guía Maestra de Python Con Portada A G V-1_PORTADA.jpg"
+                                alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Guía de Python</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 14 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/014- Java_ 100 Preguntas y Respuestas AGV.pdf" target="_blank"><img
+                                src="images/014- Java_ 100 Preguntas y Respuestas AGV-1_PORTADA.jpg"
+                                alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Java 100 preguntas</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 15 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V.pdf" target="_blank"><img
+                                src="images/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V-1_PORTADA.jpg"
+                                alt="Portada del libro Guía integral de Ethical hacking"
+                                class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Patrones de arquitectura java</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
+                        </div>
+                    </div>
+                    <!-- Book Card 16 -->
+                    <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+                        <a href="books/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V.pdf"
+                            target="_blank"><img src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
+                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <div class="p-6">
+                            <h4 class="font-bold text-white text-lg">Ubuntu</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual/Guía</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="text-center mt-12">
                     <a href="https://www.amazon.co.uk/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
                         target="_blank" rel="noopener noreferrer"
@@ -649,7 +748,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Contact Section -->
         <footer id="contact" class="py-16 bg-black">
             <div class="container mx-auto px-6 text-center">
