Agregué botón de linkedin después del mapa de empleos

--- a/index.html
+++ b/index.html
@@ -367,6 +367,23 @@
                 </div>
             </div>
         </section>
+        <!-- CAMBIO AQUÍ: Nueva sección para el botón de LinkedIn -->
+        <section class="py-16 bg-black/20">
+            <div class="container mx-auto px-6 text-center">
+                <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en saber más de mi experiencia?</h3>
+                <p class="text-gray-400 max-w-xl mx-auto mb-8">
+                    Mira mi perfil de LinkedIn, allí enontrarás toda mi información laboral detallada.
+                </p>
+                <a href="https://www.linkedin.com/in/alejandro-gonzalo-vera/" target="_blank" rel="noopener noreferrer" class="inline-block text-white font-bold text-lg py-4 px-10 rounded-full
+                          bg-gradient-to-r from-sky-600 to-cyan-500 
+                          hover:from-sky-500 hover:to-cyan-400 
+                          transform hover:scale-105 transition-all duration-300 shadow-lg hover:shadow-cyan-500/50">
+                    <i class="fab fa-linkedin fa-1x"></i>
+                    Visitar mi LinkedIn
+                </a>
+            </div>
+        </section>
+        <!-- FIN DEL CAMBIO -->
 
         <!-- Portfolio Section -->
         <section id="portfolio" class="py-24">
