--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <!-- CAMBIO AQUÍ: Nueva sección para el botón de GitHub -->
         <section class="py-16 bg-black/20">
             <div class="container mx-auto px-6 text-center">
-                <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en ver más de mi trabajo?</h3>
+                <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en ver más de mis proyectos?</h3>
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
                     Explora todos mis repositorios, contribuciones y proyectos personales directamente en mi perfil de
                     GitHub.
