corregí un typo

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     Desarrollador de Software <br />& <span class="accent-color">Experto en Ethical Hacking</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-400 max-w-3xl mx-auto mb-8">
-                    Apasionado por construir aplicaciones robustas y escalables. Y escritor incansable sobre el
+                    Apasionado por construir aplicaciones robustas y escalables. Escritor incansable sobre el
                     ecosistema IT y comunidad de Hacking.
                 </p>
                 <a href="#portfolio"
