--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro G Vera - Portfolio Tecnológico</title>
-     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -32,7 +32,9 @@
         }
 
         .section-title {
-            @apply text-3xl font-bold text-center mb-12 text-white;
+            @apply font-bold text-center mb-12 text-white;
+            font-size: 2rem;
+            /* Tamaño manual */
         }
 
         .accent-color {
@@ -153,8 +155,6 @@
             overflow-x: auto;
             display: block;
         }
-
-
     </style>
 </head>
 
@@ -363,7 +363,7 @@
                             </div>
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
         </section>
@@ -374,7 +374,8 @@
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
                     Mira mi perfil de LinkedIn, allí enontrarás toda mi información laboral detallada.
                 </p>
-                <a href="https://www.linkedin.com/in/alejandro-gonzalo-vera/" target="_blank" rel="noopener noreferrer" class="inline-block text-white font-bold text-lg py-4 px-10 rounded-full
+                <a href="https://www.linkedin.com/in/alejandro-gonzalo-vera/" target="_blank" rel="noopener noreferrer"
+                    class="inline-block text-white font-bold text-lg py-4 px-10 rounded-full
                           bg-gradient-to-r from-sky-600 to-cyan-500 
                           hover:from-sky-500 hover:to-cyan-400 
                           transform hover:scale-105 transition-all duration-300 shadow-lg hover:shadow-cyan-500/50">
@@ -677,7 +678,8 @@
                     </div>
                     <!-- Book Card 10 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera.pdf" target="_blank"><img
+                        <a href="books/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera.pdf"
+                            target="_blank"><img
                                 src="images/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -687,7 +689,8 @@
                     </div>
                     <!-- Book Card 11 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera.pdf" target="_blank"><img
+                        <a href="books/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera.pdf"
+                            target="_blank"><img
                                 src="images/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -698,8 +701,8 @@
                     </div>
                     <!-- Book Card 12 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/012- Guia HTML 5 CSS3 AGV.pdf"
-                            target="_blank"><img src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
+                        <a href="books/012- Guia HTML 5 CSS3 AGV.pdf" target="_blank"><img
+                                src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">HTML5 CSS3</h4>
@@ -736,7 +739,8 @@
                     </div>
                     <!-- Book Card 15 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V.pdf" target="_blank"><img
+                        <a href="books/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V.pdf"
+                            target="_blank"><img
                                 src="images/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -748,7 +752,8 @@
                     <!-- Book Card 16 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
                         <a href="books/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V.pdf"
-                            target="_blank"><img src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
+                            target="_blank"><img
+                                src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Ubuntu</h4>
