Agregué un cuadro al sobre mí

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
             <div class="container mx-auto px-6">
                 <h2 class="section-title">Sobre Mí</h2>
                 <br><br>
-                <div class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed">
+                <div class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
                     <p>
                         ¡Hola! Soy Alejandro G Vera, un profesional apasionado por la tecnología, la enseñanza y la
-                        escritura. Con una sólida formación en desarrollo full-stack, ciberseguridad y programación
+                        escritura. Con una sólida formación en <b>desarrollo full-stack</b>, <b>ciberseguridad</b> y programación
                         avanzada, me dedico a crear soluciones eficientes y seguras, combinando creatividad con
                         excelencia técnica.
 
