agregué el link en la navbar para books

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 <a href="#experience" class="nav-link">Experiencia</a>
                 <a href="#portfolio" class="nav-link">Portafolio</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
+                <a href="#books" class="nav-link">Books</a>
                 <!-- CAMBIO AQUÍ: Aumentado el padding horizontal de 'px-4' a 'px-6' para darle más espacio -->
                 <a href="#contact" class="nav-link bg-sky-600 text-white hover:bg-sky-500 px-6">Contacto</a>
             </nav>
@@ -183,6 +184,7 @@
             <a href="#experience" class="block py-2 px-4 text-sm hover:bg-slate-800">Experiencia</a>
             <a href="#portfolio" class="block py-2 px-4 text-sm hover:bg-slate-800">Portafolio</a>
             <a href="#skills" class="block py-2 px-4 text-sm hover:bg-slate-800">Habilidades</a>
+            <a href="#books" class="block py-2 px-4 text-sm hover:bg-slate-800">Books</a>
             <a href="#contact" class="block py-2 px-4 text-sm hover:bg-slate-800">Contacto</a>
         </div>
     </header>
@@ -556,7 +558,7 @@
         <!-- FIN DEL CAMBIO -->
 
         <!-- Author / Books Section -->
-        <section id="author2" class="py-20 md:py-32 bg-gray-900">
+        <section id="books" class="py-20 md:py-32 bg-gray-900">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h2 class="text-3xl md:text-4xl font-bold text-white">Una Biblioteca a tu Alcance</h2>
