agregué dos videos más de cursos

--- a/index.html
+++ b/index.html
@@ -428,6 +428,28 @@
                             <p class="text-gray-400 mt-2">Explicación paso a paso sobre cómo desarrollar un Pentest con
                                 Kali Linux.</p>
                         </div>
+                         <!-- Video 3 -->
+                        <div class="card">
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/Fuii0ibbHDI" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen class="w-full h-full"></iframe>
+                            </div>
+                            <h3 class="text-xl font-bold mt-4 text-white">Curso Completo de Java SE</h3>
+                            <p class="text-gray-400 mt-2">Curso de Java SE completísimo desde cero a héroe..</p>
+                        </div>
+                        <!-- Video 4 -->
+                        <div class="card">
+                            <div class="video-container">
+                                <iframe
+                                    src="https://www.youtube.com/embed/ezV5Fv_x6zg"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen class="w-full h-full"></iframe>
+                            </div>
+                            <h3 class="text-xl font-bold mt-4 text-white">Curso completo de Python</h3>
+                            <p class="text-gray-400 mt-2">Curso desde cero del lenguaje de programación Python orientado al Ethical Hacking.</p>
+                        </div>
                     </div>
                 </div>
 
