--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@
         <section id="books" class="py-20 md:py-32 bg-gray-900">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
-                    <h2 class="text-3xl md:text-4xl font-bold text-white">Una Biblioteca a tu Alcance</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-white">Creación de contenido de calidad</h2>
                     <div class="w-24 h-1 bg-amber-500 mx-auto mt-4 mb-8"></div>
                     <p class="text-lg text-gray-400 max-w-3xl mx-auto">Desde Linux puro pasando por tools hasta Ethical
-                        Hacking con Kali, cada libro es un mundo por descubrir.</p>
+                        Hacking con Kali, cada libro es un despliegue de creatividad y experiencia.</p>
                 </div>
 
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
