Creación de contenidos agregada

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <nav class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="nav-link">Sobre mí</a>
                 <a href="#experience" class="nav-link">Experiencia</a>
-                <a href="#portfolio" class="nav-link">Portafolio</a>
+                <a href="#portfolio" class="nav-link">Videos/code</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
                 <a href="#books" class="nav-link">Books</a>
                 <!-- CAMBIO AQUÍ: Aumentado el padding horizontal de 'px-4' a 'px-6' para darle más espacio -->
@@ -195,7 +195,7 @@
             class="h-[calc(100vh-80px)] flex items-center justify-center text-center bg-grid-slate-800/[0.2]">
             <div class="container mx-auto px-6">
                 <h1 class="text-5xl md:text-7xl font-black mb-4 text-white leading-tight">
-                    Desarrollador de Software <br />& <span class="accent-color">Experto en Ethical Hacking</span>
+                    Creador de contenido <br />& <span class="accent-color">Experto en Ethical Hacking</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-400 max-w-3xl mx-auto mb-8">
                     Apasionado por construir aplicaciones robustas y escalables. Escritor incansable sobre el
@@ -203,7 +203,7 @@
                 </p>
                 <a href="#portfolio"
                     class="bg-sky-600 text-white font-bold py-3 px-8 rounded-full hover:bg-sky-500 transition-transform duration-300 inline-block hover:scale-105">
-                    Ver mis proyectos
+                    Algunos videos de mis capacitaciones
                 </a>
             </div>
         </section>
@@ -391,7 +391,7 @@
         <!-- Portfolio Section -->
         <section id="portfolio" class="py-24">
             <div class="container mx-auto px-6">
-                <h2 class="section-title"><b>Portfolio de Proyectos</b></h2>
+                <h2 class="section-title"><b>Algunos videos y código:</b></h2>
 
                 <!-- Tabs -->
                 <div class="flex justify-center mb-12 border-b border-slate-800">
@@ -459,7 +459,7 @@
                         <!-- Project List -->
                         <div class="w-full md:w-1/4">
                             <div class="card p-4">
-                                <h3 class="font-bold text-white mb-4">Proyectos</h3>
+                                <h3 class="font-bold text-white mb-4">Videos/code</h3>
                                 <ul id="project-list" class="space-y-2">
                                     <li><a href="#"
                                             class="project-link block p-2 rounded-md hover:bg-slate-800 text-sky-400"
@@ -563,7 +563,7 @@
         <!-- CAMBIO AQUÍ: Nueva sección para el botón de GitHub -->
         <section class="py-16 bg-black/20">
             <div class="container mx-auto px-6 text-center">
-                <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en ver más de mis proyectos?</h3>
+                <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en ver mis proyectos?</h3>
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
                     Explora todos mis repositorios, contribuciones y proyectos personales directamente en mi perfil de
                     GitHub.
