--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     Creador de contenido <br />& <span class="accent-color">Experto en Ethical Hacking</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-400 max-w-3xl mx-auto mb-8">
-                    Apasionado por construir aplicaciones robustas y escalables. Escritor incansable sobre el
+                    Apasionado por capacitar online. Creador de contenido de alta calidad. Escritor incansable sobre el
                     ecosistema IT y comunidad de Hacking.
                 </p>
                 <a href="#portfolio"
