--- a/index.html
+++ b/index.html
@@ -213,14 +213,18 @@
             <div class="container mx-auto px-6">
                 <h2 class="section-title">Sobre Mí</h2>
                 <br><br>
-                <div class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
+                <div
+                    class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
                     <p>
                         ¡Hola! Soy Alejandro G Vera, un profesional apasionado por la tecnología, la enseñanza y la
-                        escritura. Con una sólida formación en <b>desarrollo full-stack</b>, <b>ciberseguridad</b> y programación
-                        avanzada, me dedico a crear soluciones eficientes y seguras, combinando creatividad con
+                        escritura. Con una sólida formación en <b>desarrollo full-stack</b>, <b>ciberseguridad</b> y
+                        programación
+                        avanzada, me dedico a crear contenido en linea, combinando creatividad con
                         excelencia técnica.
-
-                        Además de mi trayectoria en TI, soy instructor en plataformas e-learning, donde comparto
+                    </p>
+                    <p class="mt-4">
+                        Además de mi trayectoria en TI, soy instructor en plataformas e-learning como Udemy.com, donde
+                        comparto
                         conocimientos de programación y seguridad informática, ayudando a otros a potenciar sus
                         habilidades en el mundo digital.
                     </p>
@@ -428,7 +432,7 @@
                             <p class="text-gray-400 mt-2">Explicación paso a paso sobre cómo desarrollar un Pentest con
                                 Kali Linux.</p>
                         </div>
-                         <!-- Video 3 -->
+                        <!-- Video 3 -->
                         <div class="card">
                             <div class="video-container">
                                 <iframe src="https://www.youtube.com/embed/Fuii0ibbHDI" frameborder="0"
@@ -441,14 +445,13 @@
                         <!-- Video 4 -->
                         <div class="card">
                             <div class="video-container">
-                                <iframe
-                                    src="https://www.youtube.com/embed/ezV5Fv_x6zg"
-                                    frameborder="0"
+                                <iframe src="https://www.youtube.com/embed/ezV5Fv_x6zg" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen class="w-full h-full"></iframe>
                             </div>
                             <h3 class="text-xl font-bold mt-4 text-white">Curso completo de Python</h3>
-                            <p class="text-gray-400 mt-2">Curso desde cero del lenguaje de programación Python orientado al Ethical Hacking.</p>
+                            <p class="text-gray-400 mt-2">Curso desde cero del lenguaje de programación Python orientado
+                                al Ethical Hacking.</p>
                         </div>
                     </div>
                 </div>
