--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <!-- CAMBIO AQUÍ: Aumentado el espacio entre elementos de 'space-x-2' a 'space-x-4' -->
             <nav class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="nav-link">Sobre mí</a>
-                <a href="#experience" class="nav-link">Experiencia</a>
+                <a href="#experience" class="nav-link">Trayectoria</a>
                 <a href="#portfolio" class="nav-link">Videos/code</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
                 <a href="#books" class="nav-link">Books</a>
@@ -181,7 +181,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-slate-900">
             <a href="#about" class="block py-2 px-4 text-sm hover:bg-slate-800">Sobre mí</a>
-            <a href="#experience" class="block py-2 px-4 text-sm hover:bg-slate-800">Experiencia</a>
+            <a href="#experience" class="block py-2 px-4 text-sm hover:bg-slate-800">Trayectoria</a>
             <a href="#portfolio" class="block py-2 px-4 text-sm hover:bg-slate-800">Portafolio</a>
             <a href="#skills" class="block py-2 px-4 text-sm hover:bg-slate-800">Habilidades</a>
             <a href="#books" class="block py-2 px-4 text-sm hover:bg-slate-800">Books</a>
@@ -249,6 +249,26 @@
 
                     <!-- Timeline Items -->
                     <div class="space-y-12">
+                        <!-- Experiencia laboral -->
+                        <div class="relative">
+                            <div class="md:flex flex-row-reverse items-center md:space-x-reverse md:space-x-8">
+                                <div class="md:w-1/2"></div>
+                                <div class="md:w-1/2">
+                                    <div class="card md:text-right">
+                                        <p class="text-sky-400 font-semibold">Julio 2025 - Presente</p>
+                                        <h3 class="text-xl font-bold text-white mt-1">Creación de contenido | Amazon KDP
+                                        </h3>
+                                        <p class="text-gray-400 font-medium">Freelance Applications</p>
+                                        <p class="text-gray-300 mt-3">Especializado en crear contenido relacionado a la
+                                            informática y el Ethical Hacking, con más de 50 títulos publicados hasta la
+                                            fecha.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                            </div>
+                        </div>
                         <!-- Experiencia Laboral -->
                         <div class="relative">
                             <div class="md:flex items-center md:space-x-8">
