--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             class="h-[calc(100vh-80px)] flex items-center justify-center text-center bg-grid-slate-800/[0.2]">
             <div class="container mx-auto px-6">
                 <h1 class="text-5xl md:text-7xl font-black mb-4 text-white leading-tight">
-                    Creador de contenido <br />& <span class="accent-color">Experto en Ethical Hacking</span>
+                    Creador de contenido <br />& <span class="accent-color">Instructor en Ethical Hacking</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-400 max-w-3xl mx-auto mb-8">
                     Apasionado por capacitar online. Creador de contenido de alta calidad. Escritor incansable sobre el
