Resolví los enlaces rotos

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 1 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/001- La Biblia de Linux Ethical Hacking Alejandro Gonzalo Vera.pdf"
+                        <a href="#"
                             target="_blank"><img src="images/001- La Biblia de Linux Ethical Hacking.jpg"
                                 alt="La biblia de linux Ethical hacking" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -625,7 +625,7 @@
                     </div>
                     <!-- Book Card 2 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/002- Burp Suite_ Análisis Profundo_A G V.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/002- Burp Suite_ Análisis Profundo.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -635,7 +635,7 @@
                     </div>
                     <!-- Book Card 3 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/003- Guía integral Ethical hacking Kali A G V.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/03_Guía_integral_Ethical_hacking_page-0001.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -646,7 +646,7 @@
                     </div>
                     <!-- Book Card 4 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/004- Dominando THC Hydra en Kali Linux Alejandro G Vera.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/004- Dominando THC Hydra en Kali Linux PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -665,7 +665,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 5 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/005- John The Ripper_ Guía Completa A G V.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/005- John The Ripper_ Guía Completa.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -675,7 +675,7 @@
                     </div>
                     <!-- Book Card 6 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/006- Manual de Linux completo A G V.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/006- Manual de Linux completo A G V.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -685,7 +685,7 @@
                     </div>
                     <!-- Book Card 7 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/007- Metasploit Manual_Alejandro G Vera.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/007- Metasploit Manual_Alejandro G Vera.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -696,7 +696,7 @@
                     </div>
                     <!-- Book Card 8 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/008- theHarvester_ Uso Avanzado en Kali Alejandro G Vera.pdf"
+                        <a href="#"
                             target="_blank"><img src="images/008- theHarvester_ Uso Avanzado en Kali.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -715,7 +715,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 9 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/009- Burnout en desarrollo de software Alejandro G Vera.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/009- Burnout en desarrollo de software Alejandro G Vera-PORTADA.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -725,7 +725,7 @@
                     </div>
                     <!-- Book Card 10 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera.pdf"
+                        <a href="#"
                             target="_blank"><img
                                 src="images/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
@@ -736,7 +736,7 @@
                     </div>
                     <!-- Book Card 11 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera.pdf"
+                        <a href="#"
                             target="_blank"><img
                                 src="images/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
@@ -748,7 +748,7 @@
                     </div>
                     <!-- Book Card 12 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/012- Guia HTML 5 CSS3 AGV.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -766,7 +766,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 13 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/013- Guía Maestra de Python Con Portada A G V.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/013- Guía Maestra de Python Con Portada A G V-1_PORTADA.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -776,7 +776,7 @@
                     </div>
                     <!-- Book Card 14 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/014- Java_ 100 Preguntas y Respuestas AGV.pdf" target="_blank"><img
+                        <a href="#" target="_blank"><img
                                 src="images/014- Java_ 100 Preguntas y Respuestas AGV-1_PORTADA.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -786,7 +786,7 @@
                     </div>
                     <!-- Book Card 15 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V.pdf"
+                        <a href="#"
                             target="_blank"><img
                                 src="images/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
@@ -798,7 +798,7 @@
                     </div>
                     <!-- Book Card 16 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="books/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V.pdf"
+                        <a href="#"
                             target="_blank"><img
                                 src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
