--- a/index.html
+++ b/index.html
@@ -609,13 +609,13 @@
                     <h2 class="text-3xl md:text-4xl font-bold text-white">Creación de contenido de calidad</h2>
                     <div class="w-24 h-1 bg-amber-500 mx-auto mt-4 mb-8"></div>
                     <p class="text-lg text-gray-400 max-w-3xl mx-auto">Desde Linux puro pasando por tools hasta Ethical
-                        Hacking con Kali, cada libro es un despliegue de creatividad y experiencia.</p>
+                        Hacking con Kali, cada libro es un despliegue de creatividad y experiencia (Links de Amazon en cada portada).</p>
                 </div>
 
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 1 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/iCwOvpS"
                             target="_blank"><img src="images/001- La Biblia de Linux Ethical Hacking.jpg"
                                 alt="La biblia de linux Ethical hacking" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -625,7 +625,7 @@
                     </div>
                     <!-- Book Card 2 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/ahXS8sI" target="_blank"><img
                                 src="images/002- Burp Suite_ Análisis Profundo.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -635,7 +635,7 @@
                     </div>
                     <!-- Book Card 3 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/2y8LyHd" target="_blank"><img
                                 src="images/03_Guía_integral_Ethical_hacking_page-0001.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -646,7 +646,7 @@
                     </div>
                     <!-- Book Card 4 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/1pD1DUa" target="_blank"><img
                                 src="images/004- Dominando THC Hydra en Kali Linux PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -665,7 +665,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 5 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/8l4eFSw" target="_blank"><img
                                 src="images/005- John The Ripper_ Guía Completa.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -675,7 +675,7 @@
                     </div>
                     <!-- Book Card 6 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/0VonGRS" target="_blank"><img
                                 src="images/006- Manual de Linux completo A G V.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -685,7 +685,7 @@
                     </div>
                     <!-- Book Card 7 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/8k2Ho2k" target="_blank"><img
                                 src="images/007- Metasploit Manual_Alejandro G Vera.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
                                 class="w-full h-auto object-cover"></a>
@@ -696,7 +696,7 @@
                     </div>
                     <!-- Book Card 8 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/2hRDfom"
                             target="_blank"><img src="images/008- theHarvester_ Uso Avanzado en Kali.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -715,7 +715,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 9 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/dFt5Z5F" target="_blank"><img
                                 src="images/009- Burnout en desarrollo de software Alejandro G Vera-PORTADA.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -725,7 +725,7 @@
                     </div>
                     <!-- Book Card 10 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/5mU9XT6"
                             target="_blank"><img
                                 src="images/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
@@ -736,7 +736,7 @@
                     </div>
                     <!-- Book Card 11 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/hklqSPy"
                             target="_blank"><img
                                 src="images/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
@@ -748,7 +748,7 @@
                     </div>
                     <!-- Book Card 12 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/deiBWLJ" target="_blank"><img
                                 src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -766,7 +766,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 13 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/c7hhOvV" target="_blank"><img
                                 src="images/013- Guía Maestra de Python Con Portada A G V-1_PORTADA.jpg"
                                 alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -776,7 +776,7 @@
                     </div>
                     <!-- Book Card 14 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks" target="_blank"><img
+                        <a href="https://a.co/d/fMqNXmg" target="_blank"><img
                                 src="images/014- Java_ 100 Preguntas y Respuestas AGV-1_PORTADA.jpg"
                                 alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
@@ -786,7 +786,7 @@
                     </div>
                     <!-- Book Card 15 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/5dwnZ8y"
                             target="_blank"><img
                                 src="images/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V-1_PORTADA.jpg"
                                 alt="Portada del libro Guía integral de Ethical hacking"
@@ -798,7 +798,7 @@
                     </div>
                     <!-- Book Card 16 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                        <a href="https://a.co/d/7uZJS05"
                             target="_blank"><img
                                 src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
                                 alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
