Agregué un text-align center al Lenguajes y Frameworks

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <!-- Skills Section -->
         <section id="skills" class="py-24 bg-slate-900/40">
             <div class="container mx-auto px-6">
-                <h2 class="section-title"><b>Lenguajes y Frameworks</b></h2>
+                <h2 class="section-title" style="text-align: center;"><b>Lenguajes y Frameworks</b></h2>
                 <br><br>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <!-- Lenguajes -->
