--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <!-- About Me -->
         <section id="about" class="py-24">
             <div class="container mx-auto px-6">
-                <h2 class="section-title">Sobre Mí</h2>
+                <h2 class="section-title" style="text-align: center;">Sobre Mí</h2>
                 <br><br>
                 <div
                     class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
@@ -242,7 +242,7 @@
         <!-- Experience, Education, Courses (Timeline) -->
         <section id="experience" class="py-24 bg-slate-900/40">
             <div class="container mx-auto px-6">
-                <h2 class="section-title"><b>Mi Trayectoria</b></h2>
+                <h2 class="section-title" style="text-align: center;"><b>Mi Trayectoria</b></h2>
                 <div class="relative max-w-5xl mx-auto mt-12">
                     <!-- Timeline line -->
                     <div class="absolute left-1/2 w-0.5 h-full bg-slate-700 -translate-x-1/2"></div>
@@ -415,7 +415,7 @@
         <!-- Portfolio Section -->
         <section id="portfolio" class="py-24">
             <div class="container mx-auto px-6">
-                <h2 class="section-title"><b>Algunos videos y código:</b></h2>
+                <h2 class="section-title" style="text-align: center;"><b>Algunos videos y código:</b></h2>
 
                 <!-- Tabs -->
                 <div class="flex justify-center mb-12 border-b border-slate-800">
