Agregué KDP Select

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 <div class="md:w-1/2">
                                     <div class="card md:text-right">
                                         <p class="text-sky-400 font-semibold">Julio 2025 - Presente</p>
-                                        <h3 class="text-xl font-bold text-white mt-1">Creación de contenido | Amazon KDP
+                                        <h3 class="text-xl font-bold text-white mt-1">Creación de contenido | KDP Select
                                         </h3>
                                         <p class="text-gray-400 font-medium">Freelance Applications</p>
                                         <p class="text-gray-300 mt-3">Especializado en crear contenido relacionado a la
@@ -609,7 +609,7 @@
                     <h2 class="text-3xl md:text-4xl font-bold text-white">Creación de contenido de calidad</h2>
                     <div class="w-24 h-1 bg-amber-500 mx-auto mt-4 mb-8"></div>
                     <p class="text-lg text-gray-400 max-w-3xl mx-auto">Desde Linux puro pasando por tools hasta Ethical
-                        Hacking con Kali, cada libro es un despliegue de creatividad y experiencia (Links de Amazon en cada portada).</p>
+                        Hacking con Kali, cada libro es un despliegue de creatividad y experiencia (<b>Links de Amazon en cada portada</b>).</p>
                 </div>
 
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
