--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-12">
-                    <a href="https://www.amazon.co.uk/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
+                    <a href="https://www.amazon.com/stores/Alejandro-Gonzalo-Vera/author/B00GI26T22/allbooks"
                         target="_blank" rel="noopener noreferrer"
                         class="bg-amber-500 text-gray-900 font-bold py-3 px-8 rounded-lg hover:bg-amber-600 transition-colors text-lg">
                         Ver todos los títulos
