--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="container mx-auto px-6 text-center">
                 <h3 class="text-2xl font-semibold text-white mb-4">¿Interesado en ver todos mis diplomas?</h3>
                 <p class="text-gray-400 max-w-xl mx-auto mb-8">
-                    Mira mi perfil de LinkedIn, allí encontrarás toda mi información detallada.
+                    Mirá mi perfil de LinkedIn, allí encontrarás toda mi información detallada.
                 </p>
                 <a href="https://www.linkedin.com/in/alejandro-gonzalo-vera/" target="_blank" rel="noopener noreferrer"
                     class="inline-block text-white font-bold text-lg py-4 px-10 rounded-full
